<resources>
    <string name="app_name">DoznakaHR</string>
    <string name="navigation_drawer_open">Otvori izbornik</string>
    <string name="navigation_drawer_close">Zatvori izbornik</string>
    <string name="nav_header_title">Izbornik</string>
    <string name="nav_header_desc">Doznaka HR</string>
    <string name="action_settings">Export</string>

    <!-- Navigation Drawer strings -->
    <string name="menu_info">Info</string>
    <string name="menu_vrste">Vrste</string>
    <string name="menu_doznaka">Doznaka</string>
    <string name="menu_suma">Suma</string>
    <string name="menu_karta">Karta</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- InfoFragment Strings -->
    <string name="info_odjel_odsjek">Odjel/Odsjek</string>
    <string name="info_gosp_jed">Gospodarska Jedinica</string>
    <string name="info_povrsina">Površina</string>
    <string name="info_vrsta_sjece">Vrsta Sječe</string>
    <string name="info_vrsta_prihoda">Vrsta Prihoda</string>
    <string name="info_povrsina_tooltip">Koristiti decimalnu TOČKU</string>
    <string-array name="info_gospodarska_jedinica">
        <!-- TODO: add more to spinner here -->
        <item>Zapadni Papuk Zvečevački</item>
    </string-array>

    <!-- VrsteFragment Strings -->
    <string name="vrste_header_left">Vrste:</string>
    <string name="vrste_header_right">Broj Tarife:</string>
    <string-array name="vrste_zpz_vrste">
        <!-- TODO: add more to spinners here -->
        <item></item>
        <item>Grab</item>
        <item>Joha</item>
        <item>Kitnjak</item>
        <item>Lipa</item>
        <item>Topola</item>
        <item>Vrba</item>
    </string-array>

    <!-- SumaFragment Strings -->
    <string name="suma_header_vrste">Vrste</string>
    <string name="suma_header_volumen">Volumen</string>
    <string name="suma_header_N">N</string>
    <string name="suma_volumen">V</string>

    <!-- SumaVrstaFragment Strings -->
    <string name="suma_vrsta_header_deb_st">Deb. St.</string>
    <string name="suma_vrsta_header_tarifa">Tarifa</string>
    <string name="suma_vrsta_header_N">N</string>
    <string name="suma_vrsta_header_V">V</string>
    <string name="suma_vrsta_debSt_1">12.5</string>
    <string name="suma_vrsta_debSt_2">17.5</string>
    <string name="suma_vrsta_debSt_3">22.5</string>
    <string name="suma_vrsta_debSt_4">27.5</string>
    <string name="suma_vrsta_debSt_5">32.5</string>
    <string name="suma_vrsta_debSt_6">37.5</string>
    <string name="suma_vrsta_debSt_7">42.5</string>
    <string name="suma_vrsta_debSt_8">47.5</string>
    <string name="suma_vrsta_debSt_9">52.5</string>
    <string name="suma_vrsta_debSt_10">57.5</string>
    <string name="suma_vrsta_debSt_11">62.5</string>
    <string name="suma_vrsta_debSt_12">67.5</string>
    <string name="suma_vrsta_debSt_13">72.5</string>
    <string name="suma_vrsta_debSt_14">77.5</string>
    <string name="suma_vrsta_debSt_15">82.5</string>
    <string name="suma_vrsta_debSt_16">87.5</string>
    <string name="suma_vrsta_debSt_17">92.5</string>
    <string name="suma_vrsta_debSt_18">97.5</string>

    <!-- SubSumaVrstaFragment Strings -->
    <string name="sub_suma_vrsta_header_promjer">Promjer</string>
    <string name="sub_suma_vrsta_header_N">N</string>

    <!-- Tarifa Spinner (const) -->
    <string-array name="tarifa">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>107</item>
        <item>108</item>
        <item>109</item>
        <item>110</item>
        <item>111</item>
        <item>112</item>
        <item>113</item>
        <item>114</item>
        <item>115</item>
        <item>116</item>
        <item>117</item>
        <item>118</item>
        <item>119</item>
        <item>120</item>
        <item>121</item>
        <item>122</item>
        <item>123</item>
        <item>124</item>
        <item>125</item>
        <item>126</item>
        <item>127</item>
        <item>128</item>
        <item>129</item>
        <item>130</item>
        <item>131</item>
    </string-array>

</resources>
